Implement some basic validation when encrypting secrets.

--- a/app/views/secrets/new.html.erb
+++ b/app/views/secrets/new.html.erb
@@ -1,3 +1,7 @@
+<% if flash[:alert] %>
+  <div class="alert"><%= flash[:alert] %></div>
+<% end %>
+
 <%= form_for @secret, url: {action: "create"} do |f| %>
   <%= f.text_area :raw_content %>
 
