--- a/app/views/secrets/create.html.erb
+++ b/app/views/secrets/create.html.erb
@@ -1,3 +1,7 @@
-<div>
-  <%= @encrypted_secret %>
+<div class="section">
+  <div class="container">
+    <div class="field">
+      <pre id="encrypted-secret"><%= @encrypted_secret %></pre>
+    </div>
+  </div>
 </div>
