--- a/app/views/secrets/new.html.erb
+++ b/app/views/secrets/new.html.erb
@@ -1,9 +1,20 @@
-<% if flash[:alert] %>
-  <div class="alert"><%= flash[:alert] %></div>
-<% end %>
+<div class="section">
+  <div class="container">
 
-<%= form_for @secret, url: {action: "create"} do |f| %>
-  <%= f.text_area :raw_content %>
+    <% if flash[:alert] %>
+      <div class="alert"><%= flash[:alert] %></div>
+    <% end %>
 
-  <%= f.submit "Keep it secret. Keep it safe." %>
-<% end %>
+    <%= form_for @secret, url: {action: "create"} do |f| %>
+      <div class="field">
+        <%= f.text_area :raw_content, class: "textarea is-primary", size: "80x20", required: true, placeholder: "Paste your secrets here..." %>
+      </div>
+
+      <div class="field">
+        <div class="control">
+          <%= f.submit "Keep it secret. Keep it safe.", class: "button is-primary", data: { "disable-with": "Encrypting..." } %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
