--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,22 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= stylesheet_link_tag 'https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css' %>
+    <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
 
   <body>
+    <nav class="navbar has-shadow is-primary">
+      <div class="container">
+        <div class="block">
+          <%= link_to root_path do %>
+            <p class="title is-1">Muna</p>
+          <% end %>
+          <div class="content subtitle is-3"><em>(noun) secret, confidentiality, secrecy.</em></div>
+        </div>
+      </div>
+    </nav>
     <%= yield %>
   </body>
 </html>
