--- a/app/views/secrets/create.html.erb
+++ b/app/views/secrets/create.html.erb
@@ -1,6 +1,14 @@
 <div class="section">
   <div class="container">
     <div class="field">
+      <button class="button is-light" id="copy-to-clipboard">
+        <span class="icon">
+          <i class="fas fa-clipboard"></i>
+        </span>
+        <span>Copy</span>
+      </button>
+    </div>
+    <div class="field">
       <pre id="encrypted-secret"><%= @encrypted_secret %></pre>
     </div>
   </div>
