Implement file download.

--- a/app/views/secrets/create.html.erb
+++ b/app/views/secrets/create.html.erb
@@ -7,6 +7,12 @@
         </span>
         <span>Copy</span>
       </button>
+      <button class="button is-light" id="file-download">
+        <span class="icon">
+          <i class="fas fa-file-download"></i>
+        </span>
+        <span>Download</span>
+      </button>
     </div>
     <div class="field">
       <pre id="encrypted-secret"><%= @encrypted_secret %></pre>
