Implement random subtitles.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
           <%= link_to root_path do %>
             <p class="title is-1">Muna</p>
           <% end %>
-          <div class="content subtitle is-3"><em>(noun) secret, confidentiality, secrecy.</em></div>
+          <div class="content subtitle is-3"><em><%= subtitles.sample %></em></div>
         </div>
       </div>
     </nav>
