Fix - autofocus secrets textarea.

--- a/app/views/secrets/new.html.erb
+++ b/app/views/secrets/new.html.erb
@@ -7,7 +7,7 @@
 
     <%= form_for @secret, url: {action: "create"} do |f| %>
       <div class="field">
-        <%= f.text_area :raw_content, class: "textarea is-primary", size: "80x20", required: true, placeholder: "Paste your secrets here..." %>
+        <%= f.text_area :raw_content, class: "textarea is-primary", size: "80x20", required: true, placeholder: "Paste your secrets here...", autofocus: true %>
       </div>
 
       <div class="field">
