--- a/app/views/secrets/new.html.erb
+++ b/app/views/secrets/new.html.erb
@@ -2,7 +2,9 @@
   <div class="container">
 
     <% if flash[:alert] %>
-      <div class="alert"><%= flash[:alert] %></div>
+      <div class="notification is-danger">
+        <%= flash[:alert] %>
+      </div>
     <% end %>
 
     <%= form_for @secret, url: {action: "create"} do |f| %>
