Implement support for secret's name (that can be used as filename when downloading).

--- a/app/views/secrets/create.html.erb
+++ b/app/views/secrets/create.html.erb
@@ -1,21 +1,24 @@
 <div class="section">
   <div class="container">
-    <div class="field">
-      <button class="button is-light" id="copy-to-clipboard">
-        <span class="icon">
-          <i class="fas fa-clipboard"></i>
+    <div class="box">
+      <h4 class="title is-4"><%= @secret.name %></h3>
+      <div class="buttons">
+        <span class="button is-light" id="copy-to-clipboard">
+          <span class="icon">
+            <i class="fas fa-clipboard"></i>
+          </span>
+          <span>Copy</span>
         </span>
-        <span>Copy</span>
-      </button>
-      <button class="button is-light" id="file-download">
-        <span class="icon">
-          <i class="fas fa-file-download"></i>
+        <span class="button is-light" id="file-download">
+          <span class="icon">
+            <i class="fas fa-file-download"></i>
+          </span>
+          <span>Download</span>
         </span>
-        <span>Download</span>
-      </button>
+      </div>
     </div>
     <div class="field">
-      <pre id="encrypted-secret"><%= @encrypted_secret %></pre>
+      <pre id="encrypted-secret" data-filename="<%= @secret.name %>"><%= @encrypted_secret %></pre>
     </div>
   </div>
 </div>
