--- a/app/views/secrets/new.html.erb
+++ b/app/views/secrets/new.html.erb
@@ -14,6 +14,12 @@
 
       <div class="field">
         <div class="control">
+          <%= f.text_field :name, class: "input is-primary", placeholder: "Name your secret (optional)" %>
+        </div>
+      </div>
+
+      <div class="field">
+        <div class="control">
           <%= f.submit "Keep it secret. Keep it safe.", class: "button is-primary", data: { "disable-with": "Encrypting..." } %>
         </div>
       </div>
