--- a/app/views/secrets/new.html.erb
+++ b/app/views/secrets/new.html.erb
@@ -9,12 +9,12 @@
 
     <%= form_for @secret, url: {action: "create"} do |f| %>
       <div class="field">
-        <%= f.text_area :raw_content, class: "textarea is-primary", size: "80x20", required: true, placeholder: "Paste your secrets here...", autofocus: true %>
+        <%= f.text_area :raw_content, class: "textarea is-primary", size: "80x15", required: true, placeholder: "Paste your secrets here...", autofocus: true %>
       </div>
 
       <div class="field">
         <div class="control">
-          <%= f.text_field :name, class: "input is-primary", placeholder: "Name your secret (optional)" %>
+          <%= f.text_field :name, class: "input is-primary", placeholder: "Name your secrets, will be used as filename on download (optional)" %>
         </div>
       </div>
 
