Change how validation errors are displayed.

--- a/app/views/secrets/new.html.erb
+++ b/app/views/secrets/new.html.erb
@@ -1,15 +1,11 @@
 <div class="section">
   <div class="container">
-
-    <% if flash[:alert] %>
-      <div class="notification is-danger">
-        <%= flash[:alert] %>
-      </div>
-    <% end %>
-
     <%= form_for @secret, url: {action: "create"} do |f| %>
       <div class="field">
-        <%= f.text_area :raw_content, class: "textarea is-primary", size: "80x15", required: true, placeholder: "Paste your secrets here...", autofocus: true %>
+        <%= f.text_area :raw_content, class: "textarea #{@secret.errors[:raw_content].present? ? 'is-danger' : 'is-primary'}", size: "80x15", required: true, placeholder: "Paste your secrets here...", autofocus: true %>
+        <% if @secret.errors[:raw_content].present? %>
+          <p class="help is-danger">Please provide some secrets, no need from all that secrecy if you don't have any!</p>
+        <% end  %>
       </div>
 
       <div class="field">
