Implement better handling for missing secret name.

--- a/app/views/secrets/create.html.erb
+++ b/app/views/secrets/create.html.erb
@@ -1,7 +1,9 @@
 <div class="section">
   <div class="container">
     <div class="box">
-      <h4 class="title is-4"><%= @secret.name %></h3>
+      <% if @secret.name.present? %>
+        <h4 class="title is-4"><%= @secret.name %></h4>
+      <% end  %>
       <div class="buttons">
         <span class="button is-light" id="copy-to-clipboard">
           <span class="icon">
@@ -18,7 +20,7 @@
       </div>
     </div>
     <div class="field">
-      <pre id="encrypted-secret" data-filename="<%= @secret.name %>"><%= @encrypted_secret %></pre>
+      <pre id="encrypted-secret" data-filename="<%= @secret.name.presence || "secret" %>"><%= @encrypted_secret %></pre>
     </div>
   </div>
 </div>
