Change style for secret name text field.

--- a/app/views/secrets/new.html.erb
+++ b/app/views/secrets/new.html.erb
@@ -10,7 +10,7 @@
 
       <div class="field">
         <div class="control">
-          <%= f.text_field :name, class: "input is-primary", placeholder: "Name your secrets, will be used as filename on download (optional)" %>
+          <%= f.text_field :name, class: "input", placeholder: "Name your secrets, will be used as filename on download (optional)" %>
         </div>
       </div>
 
