--- a/app/views/secrets/new.html.erb
+++ b/app/views/secrets/new.html.erb
@@ -2,8 +2,8 @@
   <div class="container">
     <%= form_for @secret, url: {action: "create"} do |f| %>
       <div class="field">
-        <%= f.text_area :raw_content, class: "textarea #{@secret.errors[:raw_content].present? ? 'is-danger' : 'is-primary'}", size: "80x15", required: true, placeholder: "Paste your secrets here...", autofocus: true %>
-        <% if @secret.errors[:raw_content].present? %>
+        <%= f.text_area :raw, class: "textarea #{@secret.errors[:raw].present? ? 'is-danger' : 'is-primary'}", size: "80x15", required: true, placeholder: "Paste your secrets here...", autofocus: true %>
+        <% if @secret.errors[:raw].present? %>
           <p class="help is-danger">Please provide some secrets, no need from all that secrecy if you don't have any!</p>
         <% end  %>
       </div>
